# vortix

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  demo.tape  deny.toml  dist-workspace.toml  release-plz.toml
.github/workflows/: build-binaries.yml  release-plz.yml
src/: app.rs  constants.rs  event.rs  main.rs  scanner.rs  telemetry.rs  utils.rs
src/cli/: args.rs  commands.rs
src/core/: downloader.rs  scanner.rs  telemetry.rs
src/ui/: dashboard.rs  mod.rs
src/ui/overlays/: help.rs  mod.rs  toast.rs
src/ui/widgets/: footer.rs
src/vpn/: mod.rs
